--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,5 +38,5 @@ jobs:
               env:
                   VSCE_PAT: ${{ secrets.VSCE_PAT }}
 
-            - name: Publish to Open VSX
-              run: pnpm run deploy_ovsx --pat ${{ secrets.OVSX_PAT }}
+            # - name: Publish to Open VSX
+            #   run: pnpm run deploy_ovsx --pat ${{ secrets.OVSX_PAT }}
