Change extension name to vscode-call-graph for marketplace uniqueness

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "call-graph",
+    "name": "vscode-call-graph",
     "displayName": "Call Graph",
     "description": "call graph for vscode",
     "version": "1.2.5",
