--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "callviz",
     "displayName": "callviz",
     "description": "Callgraph Visualization for vscode",
-    "version": "1.3.1",
+    "version": "1.3.2",
     "publisher": "WuZhiguo",
     "engines": {
         "vscode": "^1.65.0"
@@ -111,7 +111,7 @@
         "format": "prettier --write .",
         "test": "echo \"Test is't yet implemented\" && exit 0",
         "preinstall": "npx only-allow pnpm",
-        "postinstall": "simple-git-hooks"
+        "postinstall": "simple-git-hooks && node scripts/update-vendor.js"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
@@ -149,6 +149,9 @@
         "dot"
     ],
     "dependencies": {
+        "@hpcc-js/wasm": "^2.28.0",
+        "d3": "^7.9.0",
+        "d3-graphviz": "^5.6.0",
         "ignore": "^6.0.2"
     },
     "simple-git-hooks": {
